--- a/templates/partials/side-nav.html
+++ b/templates/partials/side-nav.html
@@ -2,6 +2,7 @@
 	<div class="container">
 		<ul class="eight columns offset-by-two">
 			<li><a class="nav-link"href="../">home</a></li>
+			<li><a href="../inauguration" class="nav-link">inauguration</a></li>
 			<li><a class="nav-link"href="../bio">president’s bio</a></li>
 			<li><a class="nav-link"href="../fact-sheet">risd facts</a></li>
 			<li><a class="nav-link"href="../press">press release</a></li>
